# TourGuideAI

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: store.py  vector_store.py
backend/app/engine/: corridor.py  drive_events.py  geo_utils.py  itinerary.py  ranking.py  state_machine.py
backend/app/models/: __init__.py  corridor.py  drive_events.py  preferences.py  scoring.py  spotify.py  trip.py
backend/app/routers/: demo.py  drive.py  spotify.py  trips.py
backend/app/services/: gemini_service.py  maps_service.py  polyline_interpolator.py  rag_service.py  spotify_service.py  tour_assembler.py
backend/data/demo/: sf_to_la.json
backend/tests/: test_corridor.py  test_drive_events.py  test_drive_websocket.py  test_gemini_service.py  test_geo_utils.py  test_itinerary.py  test_maps_service.py  test_ranking.py  test_state_machine.py  test_tour_assembler.py
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  about.tsx  index.tsx
mobile/app/drive/: [id].tsx
mobile/app/trip/: [id].tsx
mobile/components/drive/: CurrentSegment.tsx  FunFactPopup.tsx  UpcomingStop.tsx
mobile/components/map/: CorridorOverlay.tsx  DriveMap.native.tsx  DriveMap.tsx  DriveMap.web.tsx  MapWrapper.native.tsx  MapWrapper.tsx  MapWrapper.web.tsx  RouteMap.tsx  StopMarker.tsx  WebDriveMap.tsx  WebMap.tsx
mobile/components/trip/: PreferencesForm.tsx  (+2 more)
mobile/hooks/: useDriveSocket.ts  useTrip.ts
mobile/services/: api.ts  polyline.ts
mobile/types/: index.ts
